fixed alignment

--- a/utahtech3/style.css
+++ b/utahtech3/style.css
@@ -103,6 +103,6 @@ footer {
 }
 
 #logo {
-  width: 100px;   /* adjust size */
+  width: 150px;   /* adjust size */
   height: auto;  /* maintain aspect ratio */
 }
